testdata/valid/internal/app/user.go
package app

import _ "github.com/kimtaeyun/testproject/internal/domain/user"

func Serve() {}
